# Crafty_Server_Start

./: CHANGELOG.md  README.md  config.sh  conftest.py  gateway.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
legacy/: __init__.py  gateway.py
mc_gateway/: __main__.py  config.py  config_hotswap.py  crafty_client.py  crafty_process.py  idle_monitor.py  logging_setup.py  mc_status.py  messages.py  proxy.py  shutdown.py
tests/: README.md  test_config.py  test_crafty_process.py  test_hotswap.py  test_idle_monitor.py  test_messages.py  test_proxy.py
