[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mc-gateway"
version = "0.1.0"
description = "On-demand autostart/shutdown gateway for Minecraft with Crafty Controller."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings[toml]>=2.0.0",
    "requests>=2.0.0",
    "mcstatus>=11.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.20",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
mc-gateway = "mc_gateway.__main__:main"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "^legacy/",
]
[tool.ruff.lint]
exclude = ["legacy/gateway.py"]

[tool.pytest.ini_options]
addopts = "-v"
